--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                     class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports Stars Inspiration Day</a></li>
-                                <li><a href="#">Software page</a></li>
+                                <li><a href="#">Sports development platform</a></li>
                             </ul>
                         </div>
                     </div>
@@ -48,9 +48,9 @@
                             <div class="collapse navbar-collapse" id="navbar-main">
                                 <ul class="nav navbar-nav">
                                     <li><a class="smooth_scroll" href="#howitworks">How it works</a></li>
-                                    <li><a class="smooth_scroll" href="#speakers">Speakers</a></li>
+                                    <li><a class="smooth_scroll" href="#speakers">Team</a></li>
                                     <li><a class="smooth_scroll" href="#testimonials">Testimonials</a></li>
-                                    <li><a class="smooth_scroll" href="#software">Software</a></li>
+                                    <li><a class="smooth_scroll" href="#software">Platform</a></li>
                                     <li><a class="smooth_scroll" href="#contact">Contact</a></li>
                                     <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
                                            data-toggle="modal">Host event</a>
@@ -183,7 +183,7 @@
             <div class="col-md-5 event_section-left">
                 <h3> What is Sports Stars Inspiration Day</h3>
                 <div class="event_section-text">
-                    The Olympic Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
+                    The Sport Stars Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
                     It is a time for pupils eyes to be opened to new goals and experience new challenges led
                     by our team of Olympians.
                 </div>
@@ -558,7 +558,7 @@
     <div class="container software_section-height">
         <div class="row">
             <div class="col-md-6">
-                <h3>Squad in touch software</h3>
+                <h3>Squad In Touch sports development platform</h3>
                 <div class="software-margin">The Olympian Inspiration Days would not be possible without the support
                     of Squad in Touch software.
                     <br/>
@@ -644,7 +644,8 @@
                 <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
                     01293 734004
                 </div>
-                <div>Facebook <span class="contact-divider-color"> | </span>Twitter</div>
+                <div><a class="contact-decoration" href="https://www.facebook.com/SquadInTouch/"> Facebook</a> <span class="contact-divider-color"> | </span>
+                    <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <img src="src/image/logoccss.svg" alt="reily"/>
@@ -670,7 +671,7 @@
                             <button type="button" class="close close-popup" data-dismiss="modal"
                                     aria-hidden="true">
                             </button>
-                            <h4 class="modal-title">Host Olympian Day</h4>
+                            <h4 class="modal-title">Host Sport Stars Inspiration Day</h4>
                         </div>
                         <!-- Основное содержимое модального окна -->
                         <form role="form" id="contactForm">
