--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                 <div class="col-md-6 col-md-offset-6 oid">
                                     <div class="oidcen">
                                         <h2> Sports Stars Inspiration Day</h2>
-                                        <h5>Helping develop PE and Sport through Inspiration,
-                                            aspiration and engagement.</h5>
+                                        <h5>Helping develop PE and Sport through <br>Inspiration,
+                                            Aspiration and Engagement.</h5>
                                         <button class="button--primary" href="#myModal" data-toggle="modal">Host event
                                         </button>
                                     </div>
@@ -181,7 +181,7 @@
         <div class="row">
             <div class="event_section-image visible-xs"></div>
             <div class="col-md-5 event_section-left">
-                <h3> What is Sports Stars Inspiration Day</h3>
+                <h3> What is Sports Stars Inspiration Day?</h3>
                 <div class="event_section-text">
                     The Sport Stars Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
                     It is a time for pupils eyes to be opened to new goals and experience new challenges led
@@ -559,10 +559,10 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>Squad In Touch sports development platform</h3>
-                <div class="software-margin">The Olympian Inspiration Days would not be possible without the support
-                    of Squad in Touch software.
+                <div class="software-margin">The Sports Stars Inspiration Days would not be possible without the support
+                    of Squad in Touch sports development platform.
                     <br/>
-                    <br>The software can help further engage, inspire and develop your pupils,
+                    <br>The platform can help further engage, inspire and develop your pupils,
                     staffs and parents interest
                     and knowledge of PE and Sport. Not only a management and organisational tool but an ability to
                     provide sustainable services to benefit future pupils and staff in their sports development.
