--- a/menu.html
+++ b/menu.html
@@ -15,15 +15,15 @@
         <div class="row">
 
             <!--LEFT MENU-->
-            <div class="col-md-5">
+            <div class="col-sm-5">
                 <div class="menu_left">
                     <img class="logo" src="src/image/logo.svg">
-                    <div class="menu_dropdown">
+                    <div class="menu_dropdown hidden-xs">
                         <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
                                 class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                         <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                             <li><a class="active" href="#">Sports Stars Inspiration Day</a></li>
-                            <li><a href="#">Software page</a></li>
+                            <li><a href="#">Sports development platform</a></li>
                         </ul>
                     </div>
                 </div>
@@ -31,25 +31,24 @@
             <!--./LEFT MENU-->
 
             <!--RIGHT MENU-->
-            <div class="col-md-7 menu_right">
-                <nav class="navbar navbar-default navbar-custom">
+            <div class="col-sm-7 menu_right">
+                <nav class="navbar-custom">
                     <div class="container">
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                    data-target="#navbar-main">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
+                            <a href="#navbar-main" class="visible-xs collapsed menu_button" data-toggle="collapse">
+                                <img src="src/icon/menu.svg" alt="menu" />
+                            </a>
                         </div>
-                        <div class="collapse navbar-collapse" id="navbar-main">
+                        <div class="collapse main-menu" id="navbar-main">
+                            <div class="main-menu-overlay"></div>
                             <ul class="nav navbar-nav">
-                                <li><a href="#howitworks">How it works</a></li>
-                                <li><a href="#speakers">Speakers</a></li>
-                                <li><a href="#testimonials">Testimonials</a></li>
-                                <li><a href="#software">Software</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it works</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#software">Platform</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
+                                <li class="main-menu-item">
+                                    <a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
                                        data-toggle="modal">Host event</a>
                                 </li>
                             </ul>
