--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
         <div class="row">
 
             <!--LEFT MENU-->
-            <div class="col-sm-5">
+            <div class="col-md-12 fixed_menu-wrapper">
                 <div class="menu_left">
                     <img class="logo" src="src/image/logo.svg">
                     <div class="menu_dropdown hidden-xs">
@@ -27,37 +27,39 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <!--./LEFT MENU-->
+                <!--./LEFT MENU-->
 
-            <!--RIGHT MENU-->
-            <div class="col-sm-7 menu_right">
-                <nav class="navbar-custom">
-                    <div class="container">
+                <!--RIGHT MENU-->
+                <div class="menu_right">
+                    <nav class="navbar-custom">
                         <div class="navbar-header">
                             <a href="#navbar-main" class="visible-xs collapsed menu_button" data-toggle="collapse">
-                                <img src="src/icon/menu.svg" alt="menu" />
+                                <img src="src/icon/menu.svg" alt="menu"/>
                             </a>
                         </div>
                         <div class="collapse main-menu" id="navbar-main">
                             <div class="main-menu-overlay"></div>
                             <ul class="nav navbar-nav">
-                                <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it works</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
+                                    works</a></li>
                                 <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a></li>
-                                <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a></li>
-                                <li class="main-menu-item"><a class="smooth_scroll" href="#software">Platform</a></li>
+                                <li class="main-menu-item"><a class="smooth_scroll"
+                                                              href="#testimonials">Testimonials</a>
+                                </li>
+                                <li class="main-menu-item"><a class="smooth_scroll" href="#software">Platform</a>
+                                </li>
                                 <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                <li class="main-menu-item">
-                                    <a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
+                                <li class="main-menu-item active">
+                                    <a href="#myModal"
+                                       class="collapse"
                                        data-toggle="modal">Host event</a>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
+                <!--RIGHT MENU-->
             </div>
-            <!--RIGHT MENU-->
-
         </div>
     </div>
 
