--- a/platform.html
+++ b/platform.html
@@ -72,6 +72,36 @@
     <!--SLIDER-->
         <div class="platform_slide">
 
+            <div class="slider_content">
+
+                <div class="slider_content-top">
+                    <h3>
+                        Kids and youth sports development platform
+                        supported by the team of Olympians.
+                        Make sport fun again.
+                    </h3>
+
+                    <a href="https://app.squadintouch.com">
+                        <button  class="button--primary">Sign up / Sign in</button>
+                    </a>
+                </div>
+
+                <div class="slider_content-bottom">
+
+                    <p>
+                    "Squad in Touch provides everything we need to organise school teams and clubs easily.
+                    Anything that is not a feature can be sorted out effectively and the support we have been
+                    given setting this up has been great... <a href="#">Read more</a>
+                    </p>
+
+                    <p>
+                    <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
+                    </p>
+
+                </div>
+
+            </div>
+
         </div>
 
 
