--- a/platform.html
+++ b/platform.html
@@ -70,46 +70,46 @@
 
 
     <!--SLIDER-->
-        <div class="platform_slide">
+    <div class="platform_slide">
 
-            <div class="slider_content">
+        <div class="slider_content">
 
-                <div class="slider_content-top">
-                    <h3>
-                        Kids and youth sports development platform
-                        supported by the team of Olympians.
-                        Make sport fun again.
-                    </h3>
+            <div class="slider_content-top">
+                <h3>
+                    Kids and youth sports development platform
+                    supported by the team of Olympians.
+                    Make sport fun again.
+                </h3>
 
-                    <a href="https://app.squadintouch.com">
-                        <button  class="button--primary">Sign up / Sign in</button>
-                    </a>
-                </div>
+                <a href="https://app.squadintouch.com">
+                    <button class="button--primary">Sign up / Sign in</button>
+                </a>
+            </div>
 
-                <div class="slider_content-bottom">
+            <div class="slider_content-bottom">
 
-                    <p>
+                <p>
                     "Squad in Touch provides everything we need to organise school teams and clubs easily.
                     Anything that is not a feature can be sorted out effectively and the support we have been
                     given setting this up has been great... <a href="#">Read more</a>
-                    </p>
+                </p>
 
-                    <p>
+                <p>
                     <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
-                    </p>
-
-                </div>
+                </p>
 
             </div>
 
         </div>
 
-
+    </div>
     <!--./SLIDER-->
 
 
     <!--BOTTOM MENU-->
+    <div class="bottom_menu">
 
+    </div>
     <!--./BOTTOM MENU-->
 
 </header>
