Fix bottom menu layout

--- a/platform.html
+++ b/platform.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--HEADER-->
-<header>
+<header class="platform_header">
 
     <!--FIXED MENU-->
     <div class="header-nav-fixed">
@@ -86,7 +86,7 @@
                 </a>
             </div>
 
-            <div class="slider_content-bottom">
+            <div class="slider_content-bottom hidden-xs">
 
                 <p>
                     "Squad in Touch provides everything we need to organise school teams and clubs easily.
@@ -107,8 +107,18 @@
 
 
     <!--BOTTOM MENU-->
-    <div class="bottom_menu">
-
+    <div class="bottom_menu hidden-xs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="bottom_navigation">
+                        <li class="bottom_navigation-item"><a href="#how_it_works">See how it works</a></li>
+                        <li class="bottom_navigation-item"><a href="http://docs.squadintouch.com/security-and-data-protection/">Data protection & Security</a></li>
+                        <li class="bottom_navigation-item"><a href="#testimonials">Testimonials</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <!--./BOTTOM MENU-->
 
