--- a/platform.html
+++ b/platform.html
@@ -43,11 +43,11 @@
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
                                 <ul class="nav navbar-nav">
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#teachers">PE teachers</a>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="##description">PE teachers</a>
                                     </li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#schools">Schools</a></li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#parents">Parents</a></li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#students">Students</a>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Schools</a></li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Parents</a></li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Students</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#how_it_works">How it
                                         works</a></li>
@@ -124,6 +124,51 @@
 
 </header>
 <!--./HEADER-->
+
+
+<!--DESCRIPTION SECTION-->
+<section id="#description" class="description_section">
+
+    <div class="container">
+        <div class="row">
+
+            <!--TABS-->
+            <div class="col-md-7">
+
+                <ul class="tabs">
+                    <li class="tab-link current" data-tab="tab-1">Tab One</li>
+                    <li class="tab-link" data-tab="tab-2">Tab Two</li>
+                    <li class="tab-link" data-tab="tab-3">Tab Three</li>
+                    <li class="tab-link" data-tab="tab-4">Tab Four</li>
+                </ul>
+
+                <div id="tab-1" class="tab-content current">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+                <div id="tab-2" class="tab-content">
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div id="tab-3" class="tab-content">
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </div>
+                <div id="tab-4" class="tab-content">
+                    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+
+            </div>
+            <!--./TABS-->
+
+            <div class="col-sm-5 col-md-5 hidden-xs second_slide-right">
+                <img src="src/image/slide2_devices.png"/>
+            </div>
+        </div>
+    </div>
+
+
+</section>
+
+<!--./DESCRIPTION SECTION-->
+
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
