--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                                         Commonwealth Games Medallist
                                                         with a best of 2m30cm. Martyn is a fine example of having a plan
                                                         B away from the athletics
-                                                        track. He graduated from psychology…<span><a href="#martynmodal"
+                                                        track. He graduated from…<span><a href="#martynmodal"
                                                                                                      data-toggle="modal"> Read more</a></span>
                                                     </div>
 
@@ -725,7 +725,99 @@
 <!--./Subscribe discount-->
 
 <!--Testimonials-->
-<section id="testimonials" class="testimonial_section">
+<section id="testimonials" class="testimonial_section hidden-xs">
+    <!--&lt;!&ndash; Карусель &ndash;&gt;-->
+    <!--<div id="carousel-testimpnials" class="carousel slide" data-interval="0" data-ride="carousel">-->
+    <!--&lt;!&ndash; Слайды карусели &ndash;&gt;-->
+    <!--<div class="carousel-inner">-->
+    <!--&lt;!&ndash; Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда &ndash;&gt;-->
+    <!--<div class="active item">-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 testimonial-bottom">
+                <h3>Testimonials</h3>
+            </div>
+            <div class="slide-button-testimonials">
+                <div class="container slide-button-container">
+                    <div class="slide-control-height">
+                        <a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials" data-slide="next">
+                            <span class="glyphicon slide-content"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Карусель -->
+            <div id="carousel-testimonials" class="carousel slide" data-interval="0" data-ride="carousel">
+                <!-- Слайды карусели -->
+                <div class="carousel-inner">
+                    <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
+                    <div class="active item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-2 testimonial-school-section">
+                                    <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
+                                </div>
+                                <div class="col-md-4 testimonial-info">
+                                    <div class="testimonials-title">
+                                        <h4>Sir John Barrow Primary School</h4></div>
+                                    <div>He was very flexible with how we could make it more challenging for KS2 and his
+                                        sessions linked
+                                        perfectly to the PE curriculum and Multi-Skills.
+                                        <br/>
+                                        <br>— James Maher, Teacher
+                                    </div>
+                                </div>
+                                <div class="col-md-3 testimonial-picture-padding">
+                                    <iframe width="276" height="240" src="https://www.youtube.com/embed/AjAyz7-cSKc"
+                                            frameborder="0" gesture="media" allow="encrypted-media"
+                                            allowfullscreen></iframe>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="testimonial2-background"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="container">
+                        <div class="row school2-margin">
+                            <div class="col-md-2 testimonial-school-section">
+                                <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
+                            </div>
+                            <div class="col-md-4 testimonial-info">
+                                <div class="testimonials-title">
+                                    <h4>Alton Placholder School</h4></div>
+                                <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to
+                                    being
+                                    the best he
+                                    could be, and both the children and staff were captivated. He kept everyone engaged
+                                    through his
+                                    honesty, the details in his stories, and his humour… <span><a
+                                            href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
+                                    <br/>
+                                    <br>— Robert Knight, School Director
+                                </div>
+                            </div>
+                            <div class="col-md-3 testimonial-picture-padding">
+                                <div class="testimonial3-background"></div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="testimonial4-background"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+
+    </div>
+</section>
+<!---->
+<section id="testimonials" class="testimonial_section visible-xs">
     <!--&lt;!&ndash; Карусель &ndash;&gt;-->
     <!--<div id="carousel-testimpnials" class="carousel slide" data-interval="0" data-ride="carousel">-->
     <!--&lt;!&ndash; Слайды карусели &ndash;&gt;-->
