--- a/platform.html
+++ b/platform.html
@@ -133,9 +133,9 @@
         <div class="row">
 
             <!--TABS-->
-            <div class="col-md-7">
+            <div class="col-md-7 description_tabs-container">
 
-                <ul class="tabs">
+                <ul class="tabs description_tabs">
                     <li class="tab-link current" data-tab="tab-1">Tab One</li>
                     <li class="tab-link" data-tab="tab-2">Tab Two</li>
                     <li class="tab-link" data-tab="tab-3">Tab Three</li>
