--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="row">
 
                 <!--LEFT MENU-->
-                <div class="col-md-5">
+                <div class="col-md-12 fixed_menu-wrapper">
                     <div class="menu_left">
                         <img class="logo" src="src/image/logo.svg">
-                        <div class="menu_dropdown">
+                        <div class="menu_dropdown hidden-xs">
                             <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
                                     class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
@@ -30,39 +30,39 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <!--./LEFT MENU-->
+                    <!--./LEFT MENU-->
 
-                <!--RIGHT MENU-->
-                <div class="col-md-7 menu_right">
-                    <nav class="navbar navbar-default navbar-custom">
-                        <div class="container">
+                    <!--RIGHT MENU-->
+                    <div class="menu_right">
+                        <nav class="navbar-custom">
                             <div class="navbar-header">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                        data-target="#navbar-main">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
+                                <a href="#navbar-main" class="visible-xs collapsed menu_button" data-toggle="collapse">
+                                    <img src="src/icon/menu.svg" alt="menu"/>
+                                </a>
                             </div>
-                            <div class="collapse navbar-collapse" id="navbar-main">
+                            <div class="collapse main-menu" id="navbar-main">
+                                <div class="main-menu-overlay"></div>
                                 <ul class="nav navbar-nav">
-                                    <li><a class="smooth_scroll" href="#howitworks">How it works</a></li>
-                                    <li><a class="smooth_scroll" href="#speakers">Team</a></li>
-                                    <li><a class="smooth_scroll" href="#testimonials">Testimonials</a></li>
-                                    <li><a class="smooth_scroll" href="#software">Platform</a></li>
-                                    <li><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li><a href="#myModal"
-                                           class="btn btn-primary navbar-custom host-event-color collapse"
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
+                                        works</a></li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a></li>
+                                    <li class="main-menu-item"><a class="smooth_scroll"
+                                                                  href="#testimonials">Testimonials</a>
+                                    </li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#software">Platform</a>
+                                    </li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
+                                    <li class="main-menu-item active">
+                                        <a href="#myModal"
+                                           class="collapse"
                                            data-toggle="modal">Host event</a>
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                    </nav>
+                        </nav>
+                    </div>
+                    <!--RIGHT MENU-->
                 </div>
-                <!--RIGHT MENU-->
-
             </div>
         </div>
 
@@ -354,7 +354,7 @@
                                                         with a best of 2m30cm. Martyn is a fine example of having a plan
                                                         B away from the athletics
                                                         track. He graduated from…<span><a href="#martynmodal"
-                                                                                                     data-toggle="modal"> Read more</a></span>
+                                                                                          data-toggle="modal"> Read more</a></span>
                                                     </div>
 
 
@@ -457,7 +457,8 @@
                 <div class="slide-button-sportsmens">
                     <div class="container slide-button-container">
                         <div class="slide-control-height">
-                            <a class="carousel-control slide-control sportsmens-slide" href="#carousel-sportsmens-mobile"
+                            <a class="carousel-control slide-control sportsmens-slide"
+                               href="#carousel-sportsmens-mobile"
                                data-slide="next">
                                 <span class="glyphicon slide-content"></span>
                             </a>
@@ -740,7 +741,8 @@
             <div class="slide-button-testimonials">
                 <div class="container slide-button-container">
                     <div class="slide-control-height">
-                        <a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials" data-slide="next">
+                        <a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials"
+                           data-slide="next">
                             <span class="glyphicon slide-content"></span>
                         </a>
                     </div>
