--- a/platform.html
+++ b/platform.html
@@ -43,10 +43,13 @@
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
                                 <ul class="nav navbar-nav">
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="##description">PE teachers</a>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="##description">PE
+                                        teachers</a>
                                     </li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Schools</a></li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Parents</a></li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Schools</a>
+                                    </li>
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">Parents</a>
+                                    </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#description">Students</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#how_it_works">How it
@@ -113,7 +116,9 @@
                 <div class="col-md-12">
                     <ul class="bottom_navigation">
                         <li class="bottom_navigation-item"><a href="#how_it_works">See how it works</a></li>
-                        <li class="bottom_navigation-item"><a href="http://docs.squadintouch.com/security-and-data-protection/">Data protection & Security</a></li>
+                        <li class="bottom_navigation-item"><a
+                                href="http://docs.squadintouch.com/security-and-data-protection/">Data protection &
+                            Security</a></li>
                         <li class="bottom_navigation-item"><a href="#testimonials">Testimonials</a></li>
                     </ul>
                 </div>
@@ -136,31 +141,73 @@
             <div class="col-md-7 description_tabs-container">
 
                 <ul class="tabs description_tabs">
-                    <li class="tab-link current" data-tab="tab-1">Tab One</li>
-                    <li class="tab-link" data-tab="tab-2">Tab Two</li>
-                    <li class="tab-link" data-tab="tab-3">Tab Three</li>
-                    <li class="tab-link" data-tab="tab-4">Tab Four</li>
+                    <li class="tab-link current" data-tab="teachers">For PE Teachers</li>
+                    <li class="tab-link" data-tab="schools">Schools</li>
+                    <li class="tab-link" data-tab="parents">Parents</li>
+                    <li class="tab-link" data-tab="students">Students</li>
                 </ul>
 
-                <div id="tab-1" class="tab-content current">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-                <div id="tab-2" class="tab-content">
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-                <div id="tab-3" class="tab-content">
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </div>
-                <div id="tab-4" class="tab-content">
-                    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <div id="teachers" class="tab-content description_tabs-content current">
+                    <p>
+                        Spend your time doing the sport. <br>
+                        Allow Squad In Touch to take care of the rest.
+                    </p>
+                    <strong>Squad In Touch helps PE teachers:</strong> <br>
+                    • Organise fixtures calendar <br>
+                    • Submit games results even from pitches <br>
+                    • Keep track record of pupils performance and discipline up to date <br>
+                    • Communicate with parents and pupils <br>
+                    • Improve PE practice getting in touch with other PE teachers and our team of Olympians
                 </div>
 
+                <div id="schools" class="tab-content description_tabs-content">
+                    <p>
+                        A sustainable sports software solution created to help you <br>
+                        develop and manage your PE strategy and inspire the next generation
+                    </p>
+                    <strong>Squad In Touch helps schools:</strong> <br>
+                    • Save money and staff’ time <br>
+                    • Increase the number of young people taking part in competitions <br>
+                    • Promote healthy lifestyle among pupils <br>
+                    • Broaden participation opportunities <br>
+                    • Get the community involved <br>
+                    • Develop positive school/parent relationships <br>
+                    • Provide engaging and successful environment for pupils, parents and staff
+                </div>
+
+                <div id="parents" class="tab-content description_tabs-content">
+                    <p>
+                        Don’t JUST read results. <br>
+                        IMRPOVE results with our Olympians advice.
+                    </p>
+                    <strong>With Squad In Touch parents are provided with:</strong> <br>
+                    • 24 Hour access to fixtures calendar, tables and reports <br>
+                    • One touch booking for after school clubs <br>
+                    • Free app to help support their child and share photos of events <br>
+                    • Child’s performance and progress tracking <br>
+                    • Tools for communicating with school PE staff and other parents
+                </div>
+
+                <div id="students" class="tab-content description_tabs-content">
+                    <p>
+                        Get socialised around your sport life. <br>
+                        Keep in touch with your squad.
+                    </p>
+                    <strong>With Squad In Touch students are provided with:</strong> <br>
+                    • 24 Hour access to fixtures calendar, tables and reports <br>
+                    • Your performance and progress tracking <br>
+                    • Tools for communicating with school PE staff and other students <br>
+                    • Free app to share photos of events
+                </div>
+
+                <button class="button--primary description_button">SIGN UP FOR FREE</button>
             </div>
             <!--./TABS-->
 
             <div class="col-sm-5 col-md-5 hidden-xs second_slide-right">
                 <img src="src/image/slide2_devices.png"/>
             </div>
+
         </div>
     </div>
 
@@ -168,7 +215,6 @@
 </section>
 
 <!--./DESCRIPTION SECTION-->
-
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
