--- a/platform.html
+++ b/platform.html
@@ -213,8 +213,96 @@
 
 
 </section>
-
 <!--./DESCRIPTION SECTION-->
+
+
+<!--HOW IT WORKS SECTION-->
+<section id="how_it_works" class="how_it_works_section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <h2>How it works</h2>
+
+                <ul class="vertical_tabs">
+                    <li class="tab-link current" data-tab="tab-1">Schools and PE teachers web app</li>
+                    <li class="tab-link" data-tab="tab-2">Schools public web site and big screen</li>
+                    <li class="tab-link" data-tab="tab-3">Schools PE staff mobile app</li>
+                    <li class="tab-link" data-tab="tab-4">Parents and students mobile app</li>
+                    <li class="tab-link" data-tab="tab-5">Tournaments and events web site</li>
+                    <li class="tab-link" data-tab="tab-6">Schools sports partnerships web site</li>
+                </ul>
+            </div>
+
+            <div class="col-md-6 col-md-offset-1">
+                <div class="how_it_works_right">
+                    <div id="tab-1" class="vertical_tab-content current">
+                        <h6>Schools and PE teachers web app</h6>
+                        <p>
+                            • See your children personalised fixtures calendar <br>
+                            • See games results and match reports in real time <br>
+                            • See your children performance in their favourite sports<br>
+                            • Get notified about last minutes changes<br>
+                            • Send availability reports and replay consent requests anytime, anywhere<br>
+                            • Communicate with school PE staff and other parents
+                        </p>
+                    </div>
+                    <div id="tab-2" class="vertical_tab-content">
+                        <h6>Schools public web site and big screen</h6>
+                        <p>
+                            • Modern design, photo gallery on the landing page<br>
+                            • Highlighted events in the focus<br>
+                            • School sport news<br>
+                            • All pupils details are hidden for data privacy<br>
+                            • School fixtures calendar, games results, reports and photos are published automatically
+                        </p>
+                    </div>
+                    <div id="tab-3" class="vertical_tab-content">
+                        <h6>Schools PE staff mobile app</h6>
+                        <p>
+                            • See your school fixtures calendar<br>
+                            • Input games results and match reports from pitches<br>
+                            • See pupils emergency contacts even when out of the internet connection<br>
+                            • Get notified about pupils unavailability to take part<br>
+                            • Send notifications parents and students about last minutes changes
+                        </p>
+                    </div>
+                    <div id="tab-4" class="vertical_tab-content">
+                        <h6>Parents and students mobile app</h6>
+                        <p>
+                            • See personalised fixtures calendar<br>
+                            • See games results and match reports in real time<br>
+                            • Track the performance in favourite sports<br>
+                            • Get notified about last minutes changes<br>
+                            • Send availability reports and replay consent requests anytime, anywhere<br>
+                            • Communicate with school PE staff and other parents and students
+                        </p>
+                    </div>
+                    <div id="tab-5" class="vertical_tab-content">
+                        <h6>Tournaments and events web site</h6>
+                        <p>
+                            • Well-designed groups results and finals pages<br>
+                            • Games results presented automatically once submitted<br>
+                            • Dedicated web-site for each event hosted on Squad In Touch servers for free<br>
+                            • Detailed results for each school which participated<br>
+                            • Printable and email-adjusted PDFs with overall tournament results
+                        </p>
+                    </div>
+                    <div id="tab-6" class="vertical_tab-content">
+                        <h6>Schools sports partnerships web site</h6>
+                        <p>
+                            • Modern design, photo gallery on the landing page<br>
+                            • Seasonal tables are published automatically once games results are submitted<br>
+                            • Highlighted events in the focus<br>
+                            • SSP sport news<br>
+                            • Dedicated web-site for each event hosted on Squad In Touch servers for free
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--./HOW IT WORKS SECTION-->
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
