--- a/platform.html
+++ b/platform.html
@@ -304,6 +304,58 @@
 </section>
 <!--./HOW IT WORKS SECTION-->
 
+<!--TESTIMONIALS SECTION-->
+<section class="platform_testimonials_section">
+
+    <div class="container">
+        <h3>Testimonials</h3>
+    </div>
+
+    <div class="container testimonial">
+        <div class="row">
+            <div class="col-md-4 testimonial_logo">
+                <img src="src/image/isa-logo.png" alt="isa">
+            </div>
+            <div class="col-md-7 testimonial_content">
+                <h4 class="testimonial_title">
+                    Independent Schools Association
+                </h4>
+                <p>
+                    "Squad in Touch are a pleasure to work with. They are always willing to try and adapt their
+                    system to meet the users needs and make it as user friendly as possible.
+                    The team are quick and responsive and very knowledgeable in their field.
+                    Their results base is very aesthetically pleasing and makes searching for results quick and
+                    easy."<br>
+                    <br>
+                    — Richard Stedeford, Laura Blatherwick, ISA National Sports Coordinators
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container testimonial">
+        <div class="row">
+            <div class="col-md-4 testimonial_logo">
+                <img src="src/image/sir_john.png" alt="Sir John Talbot's school">
+            </div>
+            <div class="col-md-7 testimonial_content">
+                <h4 class="testimonial_title">
+                    John Talbot's School
+                </h4>
+                <p>"Squad in Touch provides everything we need to organise school teams and clubs easily. Anything that
+                    is not a feature can be sorted out effectively and the support we have been given setting this up
+                    has been great. This really is one of the best platforms out there to promote school sport and the
+                    time saving potential alone is worth the subscription fee" <br>
+                    <br>
+                    — Jack Brown, Subject Leader for PE, Sir John Talbot's School</p>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--./TESTIMONIALS SECTION-->
+
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
 </html>
