--- a/platform.html
+++ b/platform.html
@@ -27,7 +27,7 @@
                                     class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports development platform</a></li>
-                                <li><a href="#">Sports Stars Inspiration Day</a></li>
+                                <li><a href="index.html">Sports Stars Inspiration Day</a></li>
                             </ul>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
                                 <ul class="nav navbar-nav">
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="##description">PE
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#description">PE
                                         teachers</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#description">Schools</a>
@@ -132,7 +132,7 @@
 
 
 <!--DESCRIPTION SECTION-->
-<section id="#description" class="description_section">
+<section id="description" class="description_section">
 
     <div class="container">
         <div class="row">
@@ -200,7 +200,7 @@
                     • Free app to share photos of events
                 </div>
 
-                <button class="button--primary description_button">SIGN UP FOR FREE</button>
+                <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
             </div>
             <!--./TABS-->
 
@@ -310,7 +310,7 @@
 <!--./HOW IT WORKS SECTION-->
 
 <!--TESTIMONIALS SECTION-->
-<section class="platform_testimonials_section">
+<section id="testimonials" class="platform_testimonials_section">
 
     <div class="container">
         <h3>Testimonials</h3>
@@ -318,42 +318,53 @@
 
     <div class="container testimonial">
         <div class="row">
-            <div class="col-md-4 testimonial_logo">
-                <img src="src/image/isa-logo.png" alt="isa">
+            <div class="col-md-4">
+                <div class="testimonial_logo">
+                    <img src="src/image/isa-logo.png" alt="isa">
+                </div>
             </div>
-            <div class="col-md-7 testimonial_content">
-                <h4 class="testimonial_title">
-                    Independent Schools Association
-                </h4>
-                <p>
-                    "Squad in Touch are a pleasure to work with. They are always willing to try and adapt their
-                    system to meet the users needs and make it as user friendly as possible.
-                    The team are quick and responsive and very knowledgeable in their field.
-                    Their results base is very aesthetically pleasing and makes searching for results quick and
-                    easy."<br>
-                    <br>
-                    — Richard Stedeford, Laura Blatherwick, ISA National Sports Coordinators
-                </p>
+            <div class="col-md-7">
+                <div class="testimonial_content">
+                    <h4 class="testimonial_title">
+                        Independent Schools Association
+                    </h4>
+                    <p>
+                        "Squad in Touch are a pleasure to work with. They are always willing to try and adapt their
+                        system to meet the users needs and make it as user friendly as possible.
+                        The team are quick and responsive and very knowledgeable in their field.
+                        Their results base is very aesthetically pleasing and makes searching for results quick and
+                        easy."<br>
+                        <br>
+                        — Richard Stedeford, Laura Blatherwick, ISA National Sports Coordinators
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="container testimonial">
         <div class="row">
-            <div class="col-md-4 testimonial_logo">
-                <img src="src/image/sir_john.png" alt="Sir John Talbot's school">
+            <div class="col-md-4">
+                <div class="testimonial_logo">
+                    <img src="src/image/sir_john.png" alt="Sir John Talbot's school">
+                </div>
             </div>
-            <div class="col-md-7 testimonial_content">
-                <h4 class="testimonial_title">
-                    John Talbot's School
-                </h4>
-                <p>"Squad in Touch provides everything we need to organise school teams and clubs easily. Anything that
-                    is not a feature can be sorted out effectively and the support we have been given setting this up
-                    has been great. This really is one of the best platforms out there to promote school sport and the
-                    time saving potential alone is worth the subscription fee" <br>
-                    <br>
-                    — Jack Brown, Subject Leader for PE, Sir John Talbot's School</p>
-
+            <div class="col-md-7">
+                <div class="testimonial_content">
+                    <h4 class="testimonial_title">
+                        John Talbot's School
+                    </h4>
+                    <p>"Squad in Touch provides everything we need to organise school teams and clubs easily. Anything
+                        that
+                        is not a feature can be sorted out effectively and the support we have been given setting this
+                        up
+                        has been great. This really is one of the best platforms out there to promote school sport and
+                        the
+                        time saving potential alone is worth the subscription fee" <br>
+                        <br>
+                        — Jack Brown, Subject Leader for PE, Sir John Talbot's School
+                    </p>
+                </div>
             </div>
         </div>
     </div>
